<resources>
    <string name="app_name">YipShop</string>
    <string name="show_welcome">welcome to the yip shop</string>
    <string name="button_start">start shopping</string>
    <string name="instructions">instructions</string>
    <string name="first">first</string>
    <string name="second">second</string>
    <string name="third">third</string>
    <string name="yip_shop">yip shop</string>
    <string name="checkout">checkout</string>
    <string name="thankyou_message">ty_message</string>
    <string name="subtotal">subtotal</string>
    <string name="tps">tps</string>
    <string name="tvq">tvq</string>
    <string name="total">total</string>
    <string name="thank_you_for_using_my_app">thank you for using my app!</string>
    <string name="proceed_to_checkout">proceed_to_checkout</string>
    <string name="proceed_checkout">proceed to checkout</string>
    <string name="title1">title1</string>
    <string name="dollar_sign">$</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="somethingcute1">somethingcute1</string>
    <string name="minus">minus</string>
    <string name="minus2">−</string>
    <string name="title2">title2</string>
    <string name="somethingcute2">somethingcute2</string>
    <string name="somethingcute3">somethingcute3</string>
    <string name="title3">title3</string>
    <string name="description">description</string>
    <string name="description1">flamingo pencil pouches</string>
    <string name="first_title">pencil pouch</string>
    <string name="description2">cute little squishies</string>
    <string name="description3">cute little backpacks</string>
    <string name="third_title">kawaii backpacks</string>
    <string name="cute_backpacks">cute backpacks</string>
    <string name="squishies">squishies</string>
    <string name="pencil_pouches">pencil pouches</string>
    <string name="flamingo_pencil_pouches">flamingo pencil pouches</string>
    <string name="cute_little_squishies">cute little squishies</string>
    <string name="cute_shoulder_backpacks">cute shoulder backpacks</string>
    <string name="backpacks">backpacks</string>
    <string name="qty">qty.</string>
    <string name="bunny_squishies">bunny squishies</string>
    <string name="little_shoulder_bags">little shoulder bags</string>
    <string name="pink_flamingo_pouches">pink flamingo pouches</string>
    <string name="little_bunny_squishies">little_bunny_squishies</string>
    <string name="description22">little bunny squishies</string>
    <string name="_0">0</string>
    <string name="price2">1.99</string>
    <string name="price1">4.99</string>
    <string name="price3">8.99</string>
    <string name="checkout_amount">00.00</string>
    <string name="dollarsign">$</string>
    <string name="actual_subtotal">00.00</string>
    <string name="repeat_subtotal">TextView</string>
    <string name="actual_tps">TextView</string>
    <string name="actual_tvq">TextView</string>
    <string name="actual_total">TextView</string>
</resources>
