<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/yipshop_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8C9EFF"
        android:gravity="center"
        android:text="@string/yip_shop"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFF8D"
        android:textSize="30sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/dollarsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subtotal_amount"
        android:layout_alignLeft="@+id/subtotal_amount"
        android:layout_alignTop="@+id/subtotal_amount"
        android:layout_alignBottom="@+id/subtotal_amount"
        android:gravity="center"
        android:text="@string/dollarsign"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/subtotal_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scrollview_menu"
        android:layout_alignStart="@+id/yipshop_title"
        android:layout_alignLeft="@+id/yipshop_title"
        android:layout_alignTop="@+id/yipshop_title"
        android:layout_alignEnd="@+id/yipshop_title"
        android:layout_alignRight="@+id/yipshop_title"
        android:layout_marginStart="299dp"
        android:layout_marginLeft="299dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/checkout_amount"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <ScrollView
        android:id="@+id/scrollview_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/yipshop_title"
        android:layout_above="@+id/button_checkout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/first_item"
                android:layout_width="match_parent"
                android:layout_height="350dp">

                <include layout="@layout/card1_content"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/second_item"
                android:layout_width="match_parent"
                android:layout_height="350dp">

                <include layout="@layout/card2_content"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/third_item"
                android:layout_width="match_parent"
                android:layout_height="350dp">

                <include layout="@layout/card3_content"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_checkout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#8C9EFF"
        android:onClick="launchCheckoutActivity"
        android:text="@string/proceed_checkout"
        android:textAllCaps="false"
        android:textColor="#FFE57F"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

</RelativeLayout>